--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="Brainerd_Rectified.html"> Homework 5: Georeferenced Tiles</a> </br>
+    <a href="./Brainerd_Rectified.html"> Homework 5: Georeferenced Tiles</a> </br>
 </body>
 </html>
