--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <a href="./Brainerd_Rectified.html"> Homework 5: Georeferenced Tiles</a> </br>
+    <a href="https://github.com/noahtobias/HW5/blob/main/Brainerd_Historical%20Image.tif.points" 
+     
 </body>
 </html>
