--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GEOG 370</title>
 </head>
 <body>
+    <h1>GEOG 370 Homework 5</h1>
+    
     <a href="./Brainerd_Rectified.html"> Homework 5: Georeferenced Tiles</a> </br>
     <a href="https://github.com/noahtobias/HW5/blob/main/Brainerd_Historical%20Image.tif.points"> Control Points</a></br>
 
