--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>GEOG 370 Homework 5</h1>
-    
-    <a href="./Brainerd_Rectified.html"> Homework 5: Georeferenced Tiles</a> </br>
+
+    <a href="/Brainerd_Rectified.html"> Homework 5: Georeferenced Tiles</a> </br>
     <a href="https://github.com/noahtobias/HW5/blob/main/Brainerd_Historical%20Image.tif.points"> Control Points</a></br>
 
 </body>
